@@ -1,9 +1,9 @@
-package com.revolut.interview;
+package com.exercise.interview;
 
-import com.revolut.interview.constants.Constants;
-import com.revolut.interview.exceptions.InstanceAlreadyExistsException;
-import com.revolut.interview.exceptions.MaxCapacityReachedException;
-import com.revolut.interview.strategy.RandomStrategy;
+import com.exercise.interview.constants.Constants;
+import com.exercise.interview.exceptions.InstanceAlreadyExistsException;
+import com.exercise.interview.exceptions.MaxCapacityReachedException;
+import com.exercise.interview.strategy.RandomStrategy;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
@@ -16,41 +16,12 @@ import java.util.stream.IntStream;
 
 class LoadBalancerTest {
 
-//    Basic Functionality Tests
-//
-//    Test that registering a backend instance works.
-//    Test that retrieving a registered instance works.
-//
-//    Edge Case Tests
-//
-//    Test that registering a null instance throws an exception.
-//    Test that registering the same instance twice throws an exception.
-//    Test that registering more than the allowed instances throws an exception.
-//
-//    Concurrency Tests
-//
-//    Test concurrent registration of instances.
-//    Test concurrent retrieval of instances.
-//
-//            Strategy-Specific Tests
-//
-//    Test random selection strategy.
-//    Test round-robin selection strategy.
-
-
-            /**
-             *   Purpose: Ensure that a backend instance can be registered successfully.
-             */
     @Test
     void testRegisterInstance() {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
         BackendInstance instance = new BackendInstance("http://instance1");
         Assertions.assertTrue(loadBalancer.register(instance));
     }
-
-    /**
-     *   Purpose: Ensure that a registered backend instance can be retrieved.
-     */
 
     @Test
     void testGetInstance() {
@@ -60,21 +31,14 @@ class LoadBalancerTest {
         Assertions.assertEquals(instance, loadBalancer.get());
     }
 
-
-    /**
-     * Tests that registering a null instance throws an IllegalArgumentException.
-     */
     @Test
-    void testRegisterNullInstance() {
+    void testRegisterNullInstanceThrowIllegalArgumentException() {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
         Assertions.assertThrows(IllegalArgumentException.class, () -> loadBalancer.register(null));
     }
 
-    /**
-     * Tests that a BackendInstance with a duplicate address cannot be registered.
-     */
     @Test
-    void testDuplicate() {
+    void testDuplicateCannotBeRegistered() {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
         BackendInstance instance = new BackendInstance("http://instance1");
 
@@ -84,11 +48,8 @@ class LoadBalancerTest {
         Assertions.assertThrows(InstanceAlreadyExistsException.class, () -> loadBalancer.register(instance));
     }
 
-    /**
-     * Tests that the LoadBalancer can register up to MAX_INSTANCES and no more.
-     */
     @Test
-    void testMaxCapacityReached() {
+    void testMaxCapacityReachedThrowException() {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
         for (int i = 0; i < Constants.MAX_INSTANCES; i++) {
             loadBalancer.register(new BackendInstance("http://instance" + i));
@@ -97,12 +58,8 @@ class LoadBalancerTest {
     }
 
 
-//    additional tests
-    /**
-     * Tests that the get() method returns a registered BackendInstance.
-     */
     @Test
-    void testGet() {
+    void testGetBackendInstance() {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
         BackendInstance instance1 = new BackendInstance("http://instance1");
         BackendInstance instance2 = new BackendInstance("http://instance2");
@@ -116,10 +73,6 @@ class LoadBalancerTest {
     }
 
 
-
-    /**
-     * Tests that the get() method returns the only registered instance.
-     */
     @Test
     void testGetSingleInstance() {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
@@ -131,16 +84,12 @@ class LoadBalancerTest {
         Assertions.assertEquals(instance, loadBalancer.get());
     }
 
-    /**
-     * Tests concurrent registration of instances to ensure thread safety.
-     */
     @Test
     void testConcurrentRegistrations() throws InterruptedException {
         LoadBalancer loadBalancer = new LoadBalancer(new RandomStrategy());
         ExecutorService executorService = Executors.newFixedThreadPool(5);
         List<BackendInstance> instances = IntStream.range(1, 11)
-                .mapToObj(i -> new BackendInstance("http://instance" + i))
-                .collect(Collectors.toList());
+                .mapToObj(i -> new BackendInstance("http://instance" + i)).toList();
 
         // Register instances concurrently
         for (BackendInstance instance : instances) {
